[project]
name = "my-python-worker"
version = "0.1.0"
description = "A Python Worker on Cloudflare"
requires-python = ">=3.12"

# Add your production dependencies here
# Only pure Python packages work (no native/compiled packages)
# See: https://pyodide.org/en/stable/usage/packages-in-pyodide.html
dependencies = [
    # HTTP clients (async only!)
    # "httpx",
    # "aiohttp",

    # Common packages
    # "beautifulsoup4",
    # "pydantic",
]

[dependency-groups]
dev = [
    # Required for pywrangler CLI
    "workers-py",
    "workers-runtime-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================
# NOTES
# ============================================
#
# Run locally:
#   uv run pywrangler dev
#
# Deploy:
#   uv run pywrangler deploy
#
# Add packages:
#   uv add <package-name>
#
# IMPORTANT:
# - Only async HTTP libraries work (httpx, aiohttp)
# - Sync libraries like 'requests' will NOT work
# - Native/compiled packages (numpy, pandas) are NOT supported
#   unless they're in the Pyodide ecosystem
